--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -3,6 +3,20 @@
 
 {% block content %}
     <br/>
+    
+    <!--Search bar-->
+    <form action='' method='post'>
+        {% csrf_token %}
+        <div class="col-lg-6">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type='submit' value='Search'>Go!</button>
+              </span>
+                <input class="form-control" type='text' name="search_title" size="30" placeholder="Search for...">
+            </div>
+        </div>
+    </form>
+
     {% if user.is_staff %}
         <div class="container-fluid" id="uncashed_jobs">
             <div class="row">
@@ -52,4 +66,27 @@
             </div>
         </div>
     {% endif %}
+    <div class="container-fluid">
+        {% if work_orders.has_other_pages %}
+          <ul class="pagination">
+            {% if work_orders.has_previous %}
+              <li><a href="?page={{ work_orders.previous_page_number }}">&laquo;</a></li>
+            {% else %}
+              <li class="disabled"><span>&laquo;</span></li>
+            {% endif %}
+            {% for i in work_orders.paginator.page_range %}
+              {% if uncashed_work_orders.number == i %}
+                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+              {% else %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
+              {% endif %}
+            {% endfor %}
+            {% if work_orders.has_next %}
+              <li><a href="?page={{ work_orders.next_page_number }}">&raquo;</a></li>
+            {% else %}
+              <li class="disabled"><span>&raquo;</span></li>
+            {% endif %}
+          </ul>
+        {% endif %}
+    </div>
 {% endblock %}
