--- a/MAStucco/templates/base.html
+++ b/MAStucco/templates/base.html
@@ -38,11 +38,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="http://127.0.0.1:8000/">MAStucco</a>
+                  <a class="navbar-brand" href="http://127.0.0.1:8000/home/">MAStucco</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/">Home</a></li>
+                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/home/">Home</a></li>
                     <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
                         Orders</a></li>
                     <li class="{% if '/reports/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/reports/">Reports</a></li>
@@ -70,7 +70,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
-                    <li class="{% ifequal request.path '/' %}active{% endifequal %}"><a href="http://127.0.0.1:8000/">Home</a></li>
+                    <li class="{% if '/home/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/home/">Home</a></li>
                     <li class="{% if '/workorders/' in request.path %}active{% endif %}"><a href="http://127.0.0.1:8000/workorders/">Work
                         Orders</a></li>
                   </ul>
