--- a/MAStucco/templates/home.html
+++ b/MAStucco/templates/home.html
@@ -17,6 +17,8 @@
         </div>
     </form>
 
+    <br><br>
+
     {% if user.is_staff %}
         <div class="container-fluid" id="uncashed_jobs">
             <div class="row">
@@ -55,7 +57,7 @@
                         <!-- List group -->
                         <div class="list-group">
                             {% for work_order in work_orders %}
-                                <a href="#" class="list-group-item">
+                                <a href="http://127.0.0.1:8000/home/info/{{ work_order.id }}" class="list-group-item">
                                     <h4 class="list-group-item-heading">Customer: {{ work_order.customer }}</h4>
                                     <p class="list-group-item-text"><strong>Date:</strong> {{ work_order.date|date:'l, F jS' }}</p>
                                 </a>
