--- a/MAStucco/templates/workorder.html
+++ b/MAStucco/templates/workorder.html
@@ -59,7 +59,7 @@
                     {% else %}
                         <form action="" method="post">
                             {% csrf_token %}
-                            <button class="btn btn-lg btn-primary btn-block" type="submit">Cash</button>
+                            <button class="btn btn-lg btn-primary btn-block" type="submit">Take</button>
                         </form>
                     {% endif %}
                 {% endif %}
