--- a/MAStucco/templates/edit_worker.html
+++ b/MAStucco/templates/edit_worker.html
@@ -28,7 +28,10 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2">
-            <input class="btn btn-lg btn-primary btn-block" type='submit' value='Edit Worker'/>
+            <input class="btn btn-lg btn-primary btn-block" name="edit_worker" type='submit' value='Edit Worker'/>
+            </div>
+            <div class="col-xs-12 col-sm-2">
+            <input class="btn btn-lg btn-primary btn-block" name="delete_worker" type='submit' value='Delete Worker'/>
             </div>
             <div class="col-xs-12 col-sm-2">
             <a href="http://127.0.0.1:8000/home/" id="cancel" name="cancel" class="btn btn-lg btn-primary btn-block">Cancel</a>
