--- a/MAStucco/templates/edit_worker.html
+++ b/MAStucco/templates/edit_worker.html
@@ -22,7 +22,6 @@
                                     {{ form.as_p }}
                                 </div>
                             </div>
-                            <hr>
                         </div>
                     </div>
                 </div>
@@ -31,10 +30,7 @@
             <input class="btn btn-lg btn-primary btn-block" name="edit_worker" type='submit' value='Edit Worker'/>
             </div>
             <div class="col-xs-12 col-sm-2">
-            <input class="btn btn-lg btn-primary btn-block" name="delete_worker" type='submit' value='Delete Worker'/>
-            </div>
-            <div class="col-xs-12 col-sm-2">
-            <a href="http://127.0.0.1:8000/home/" id="cancel" name="cancel" class="btn btn-lg btn-primary btn-block">Cancel</a>
+            <a href="http://127.0.0.1:8000/workeradministration/" id="cancel" name="cancel" class="btn btn-lg btn-primary btn-block">Cancel</a>
             </div>
         </div>
     </form>
