--- a/MAStucco/templates/workeradministration.html
+++ b/MAStucco/templates/workeradministration.html
@@ -34,9 +34,7 @@
                     {% for user in worker_list %}
                         <a href="http://127.0.0.1:8000/workeradministration/info/{{ user.id }}" class="list-group-item">
                             <h4 class="list-group-item-heading">Username: {{ user.username }}</h4>
-                            <p class="list-group-item-text"><strong>First Name:</strong> {{ user.first_name }}</p>
-                            <p class="list-group-item-text"><strong>Last Name:</strong> {{ user.last_name }}</p>
-                            <p class="list-group-item-text"><strong>Name:</strong> {{ user.first_name }}
+                            <p class="list-group-item-text"><strong>Full Name:</strong> {{ user.first_name }}
                                 {{ user.last_name }}</p>
                             <p class="list-group-item-text"><strong>Email:</strong> {{ user.email }}</p>
                         </a>
