--- a/MAStucco/templates/edit_worker.html
+++ b/MAStucco/templates/edit_worker.html
@@ -20,6 +20,7 @@
                             <div class="form-group">
                                 <div class="col-md-5">
                                     {{ form.as_p }}
+                                    {{ form2.as_p }}
                                 </div>
                             </div>
                         </div>
