--- a/MAStucco/templates/workorder.html
+++ b/MAStucco/templates/workorder.html
@@ -56,7 +56,14 @@
                     {% endif %}
                 {% else %}
                     {% if work_order.is_taken %}
-                        <button class="btn btn-lg btn-primary btn-block disabled" type="submit">Take</button>
+                        {% if work_order.assigned_worker == user %}
+                             <form action="" method="post">
+                                {% csrf_token %}
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">Finish</button>
+                             </form>
+                        {% else %}
+                            <button class="btn btn-lg btn-primary btn-block disabled" type="submit">Take</button>
+                        {% endif %}
                     {% else %}
                         <form action="" method="post">
                             {% csrf_token %}
