--- a/MAStucco/templates/workorder.html
+++ b/MAStucco/templates/workorder.html
@@ -71,6 +71,10 @@
                         </form>
                     {% endif %}
                 {% endif %}
+            {% if work_order.work_phase == 'FI' %}
+                <a class="btn btn-lg btn-primary btn-block" href="{% url 'export_xls' work_order.id %}" type="button">Export Excel File</a>
+            {% endif %}
+
             </div>
         </div>
     </div>
