--- a/MAStucco/templates/workorder.html
+++ b/MAStucco/templates/workorder.html
@@ -71,7 +71,7 @@
                         </form>
                     {% endif %}
                 {% endif %}
-                    {%  if work_order.is_cashed or work_order.work_phase != 'FI'  %}
+                    {%  if work_order.is_cashed and work_order.work_phase == 'FI'  %}
                         <a class="btn btn-lg btn-primary btn-block" href="{% url 'export_xls' work_order.id %}" type="button">Export Excel File</a>
                     {% endif %}
 
